[package]
name = "ruhu"
version = "0.1.0"
authors = ["hrafnskogr <hrafnskogr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitf = ">=1.0"

[lib]
name = "ruhu"
path = "src/lib.rs"

[[bin]]
name = "ruhu_tester"
path = "bin/main.rs"

